buildscript {
    ext {
        kotlin_version = '1.3.31'
    }

    repositories {
        mavenCentral()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
        maven { url "https://plugins.gradle.org/m2/" }
        jcenter()
    }

    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
        classpath "net.onedaybeard.artemis:artemis-odb-gradle-plugin:2.2.0"
        classpath "net.onedaybeard.artemis:artemis-fluid-gradle-plugin:2.2.0"
    }
}

allprojects {
    apply plugin: "idea"

    group = 'AO-Java'
    version = '0.1.12'

    ext {
        appName = 'ao-java'
        gdxVersion = '1.9.10'
        kryonetVersion = '2.22.0-RC1'
        freetypeVersion = '1.9.9'
        artemisVersion = '2.2.0'
        artemisContribVersion = '2.2.0'
        gdxAIVersion = '1.8.1'
    }

    repositories {
        mavenCentral()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
        maven { url "https://plugins.gradle.org/m2/" }
        jcenter()
    }
}

subprojects {
    apply plugin: "java"

    sourceCompatibility = JavaVersion.VERSION_12
    targetCompatibility = JavaVersion.VERSION_12

	tasks.withType(JavaCompile) {
		options.encoding = "UTF-8"
		//options.compilerArgs << '-Xlint:unchecked'
		//options.deprecation = true
	}
}
